updates to collated

--- a/collated/main/A0138516A.md
+++ b/collated/main/A0138516A.md
@@ -2,7 +2,7 @@
 ###### \java\seedu\tasklist\commons\events\storage\ChangePathEvent.java
 ``` java
 
-/** Indicates the filep path in the storage has changed*/
+/** Indicates the file path in the storage has changed*/
 public class ChangePathEvent extends BaseEvent{
 
 	private String filepath;
