Added status bar

--- a/collated/main/A0140019W.md
+++ b/collated/main/A0140019W.md
@@ -314,6 +314,9 @@ public class Task implements ReadOnlyTask {
         this.isCompleted = isCompleted;
         this.isOverdue = isOverdue;
         this.isFloating = isFloating;
+        
+        initializeOverdue();
+        initializeFloating();
     }
 
     /**
@@ -519,6 +522,50 @@ public class Title {
     }
 
 }
+```
+###### \java\seedu\tasklist\ui\StatusBarFooter.java
+``` java
+    private void addProgressBar(ObservableList<ReadOnlyTask> taskList) {
+        text = new Text("");
+        text.setFont(Font.font("Arial", 12));
+        
+        progressbar = new ProgressBar(0.0);
+        progressbar.prefWidthProperty().bind(progressBarPane.widthProperty());
+        progressbar.getStyleClass().add("bar");
+        progressBarPane.getChildren().addAll(progressbar, text);
+        progressBarStatus(taskList);
+    }
+```
+###### \java\seedu\tasklist\ui\StatusBarFooter.java
+``` java
+    private void progressBarStatus(List<ReadOnlyTask> tasklist) {
+        double count = 0;
+        for (ReadOnlyTask readOnlyTask : tasklist) {
+            if(readOnlyTask.isCompleted()) {
+                count++;
+            }
+        }
+        text.setText((int)count + " / " + tasklist.size());
+        progressbar.setProgress(count/tasklist.size());
+    }
+```
+###### \resources\view\Extensions.css
+``` css
+.bar {
+    -fx-background-color:
+        -fx-box-border,
+        linear-gradient(to bottom, derive(-fx-accent,95%), derive(-fx-accent,10%)),
+        #98FB98;
+    -fx-background-insets: 0, 1, 2;
+}
+```
+###### \resources\view\StatusBarFooter.fxml
+``` fxml
+  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+```
+###### \resources\view\StatusBarFooter.fxml
+``` fxml
+      <StackPane styleClass="anchor-pane" id="progressBarPane" fx:id="progressBarPane" minWidth="0.0" GridPane.columnIndex="1" />
 ```
 ###### \resources\view\TaskListCard.fxml
 ``` fxml
