Updated collated, Ui.png

--- a/collated/docs/A0138516A.md
+++ b/collated/docs/A0138516A.md
@@ -13,7 +13,7 @@
 
 * Code written: [[functional code](https://github.com/CS2103AUG2016-F09-C1/main/blob/master/collated/main/A0138516A.md)][[test code](https://github.com/CS2103AUG2016-F09-C1/main/blob/master/collated/test/A0138516A.md)][[docs](A0138516A.md)]
 * Other major contributions:
-  * [Did the initial refactoring from AddressBook to Tasklist](https://github.com/CS2103AUG2016-F09-C1/main/commit/2a42c3cef6476b9f531918cf6579214cc233dcb2) ]
+  * [Did the initial refactoring from AddressBook to Tasklist](https://github.com/CS2103AUG2016-F09-C1/main/commit/2a42c3cef6476b9f531918cf6579214cc233dcb2) 
 
 
 -----
