--- a/collated/docs/A0140019W.md
+++ b/collated/docs/A0140019W.md
@@ -10,7 +10,7 @@
    * [Select Task](https://github.com/CS2103AUG2016-F09-C1/main/blob/master/docs/UserGuide.md#select-a-task--select)
 * Code written: [[functional code](https://github.com/CS2103AUG2016-F09-C1/main/blob/master/collated/main/A0140019W.md)][[test code](A0140019W.md)][[docs](A0140019W.md)]
 * Other major contributions:
-  * [Did the initial refactoring from AddressBook to Tasklist](https://github.com/CS2103AUG2016-F09-C1/main/commit/2a42c3cef6476b9f531918cf6579214cc233dcb2) ]
+  * [Did the initial refactoring from AddressBook to Tasklist](https://github.com/CS2103AUG2016-F09-C1/main/commit/2a42c3cef6476b9f531918cf6579214cc233dcb2) 
 
 
 -----
@@ -85,7 +85,7 @@ command `delete 1`.
 
 The diagram below shows how the `EventsCenter` reacts to that event, which eventually results in the updates
 being saved to the hard disk and the status bar of the UI being updated to reflect the 'Last Updated' time. <br>
-<img src="images\SDforDeleteTaskEventHandling.png" width="800">
+<img src="images\SDforDeleteTaskEventHandling.PNG" width="800">
 
 
 
