--- a/collated/docs/A0146840E.md
+++ b/collated/docs/A0146840E.md
@@ -32,7 +32,7 @@ We are a team based in the School of Computing, National University of Singapore
    * [Unmark Task](https://github.com/CS2103AUG2016-F09-C1/main/blob/master/docs/UserGuide.md#unmark-a-task--unmark)
 * Code written: [[functional code](https://github.com/CS2103AUG2016-F09-C1/main/blob/master/collated/main/A0146840E.md)][[test code](https://github.com/CS2103AUG2016-F09-C1/main/blob/master/collated/test/A0146840E.md)][[docs](A0146840E.md)]
 * Other major contributions:
-  * [Did the final refactoring from AddressBook to Tasklist](https://github.com/CS2103AUG2016-F09-C1/main/commit/863473fd47913a06ebd1408a391e8eb04c2d868c) ]
+  * [Did the final refactoring from AddressBook to Tasklist](https://github.com/CS2103AUG2016-F09-C1/main/commit/863473fd47913a06ebd1408a391e8eb04c2d868c)
   * Set up Travis, Coveralls and Codacy
 
 
