Updated Collated for test

--- a/collated/test/A0146840E.md
+++ b/collated/test/A0146840E.md
@@ -224,10 +224,10 @@ public class MarkCommandTest extends TaskListGuiTest {
         commandBox.runCommand("list");
         
         //mark first task
-        assertMarkSuccess(1, currentList[0], currentList);
+        assertMarkSuccess(1, currentList[0]);
         
         //mark next task
-        assertMarkSuccess(1, currentList[1], currentList);
+        assertMarkSuccess(1, currentList[1]);
         
         //mark task that don't exist
         commandBox.runCommand("mark -10");
@@ -252,7 +252,7 @@ public class MarkCommandTest extends TaskListGuiTest {
         assertResultMessage(String.format(Messages.MESSAGE_INVALID_COMMAND_FORMAT, MarkCommand.MESSAGE_USAGE));
     }
 
-    private void assertMarkSuccess(int index, TestTask taskToMark, TestTask... currentList) {
+    private void assertMarkSuccess(int index, TestTask taskToMark) {
         commandBox.runCommand("mark " + index);
         taskToMark.setCompleted(true);
         
@@ -261,57 +261,6 @@ public class MarkCommandTest extends TaskListGuiTest {
         assertMarked(taskToMark, markedCard);
         assertResultMessage("Task marked: " + taskToMark.getAsText());
     }
-}
-```
-###### \java\guitests\SelectCommandTest.java
-``` java
-public class SelectCommandTest extends TaskListGuiTest {
-
-
-    @Test
-    public void selectTask_nonEmptyList() {
-        commandBox.runCommand("list");
-        assertSelectionInvalidIndex(10); //invalid index
-        assertNoTaskSelected();
-
-        assertSelectionSuccess(1); //first task in the list
-        int taskCount = td.getTypicalTasks().length;
-        assertSelectionSuccess(taskCount); //last task in the list
-        int middleIndex = taskCount / 2;
-        assertSelectionSuccess(middleIndex); //a task in the middle of the list
-
-        assertSelectionInvalidIndex(taskCount + 1); //invalid index
-        
-        assertSelectionInvalid(0); //invalid
-        assertSelectionInvalid(-1); //invalid
-    }
-
-    @Test
-    public void selectTask_emptyList(){
-        commandBox.runCommand("clear");
-        assertListSize(0);
-        assertSelectionInvalidIndex(1); //invalid index
-    }
-
-    private void assertSelectionInvalidIndex(int index) {
-        commandBox.runCommand("select " + index);
-        assertResultMessage("The task index provided is invalid");
-    }
-    
-    private void assertSelectionInvalid(int index) {
-        commandBox.runCommand("select " + index);
-        assertResultMessage(String.format(Messages.MESSAGE_INVALID_COMMAND_FORMAT, SelectCommand.MESSAGE_USAGE));
-    }
-
-    private void assertSelectionSuccess(int index) {
-        commandBox.runCommand("select " + index);
-        assertResultMessage(td.getTypicalTaskList().getTaskList().get(index-1).getAllAsText());
-    }
-
-    private void assertNoTaskSelected() {
-        assertEquals(taskListPanel.getSelectedTasks().size(), 0);
-    }
-
 }
 ```
 ###### \java\guitests\UnmarkCommandTest.java
@@ -328,10 +277,10 @@ public class UnmarkCommandTest extends TaskListGuiTest {
         commandBox.runCommand("mark " + 1);
         
         //unmark first task
-        assertUnmarkSuccess(currentList.length, currentList[0], currentList);
+        assertUnmarkSuccess(currentList.length, currentList[0]);
         
         //unmark next task
-        assertUnmarkSuccess(currentList.length, currentList[1], currentList);
+        assertUnmarkSuccess(currentList.length, currentList[1]);
         
         //unmark task that don't exist
         commandBox.runCommand("unmark -10");
@@ -356,7 +305,7 @@ public class UnmarkCommandTest extends TaskListGuiTest {
         assertResultMessage(String.format(Messages.MESSAGE_INVALID_COMMAND_FORMAT, UnmarkCommand.MESSAGE_USAGE));
     }
 
-    private void assertUnmarkSuccess(int index, TestTask taskToUnmark, TestTask... currentList) {
+    private void assertUnmarkSuccess(int index, TestTask taskToUnmark) {
         commandBox.runCommand("unmark " + index);
         taskToUnmark.setCompleted(false);
         
@@ -483,6 +432,7 @@ public class TypicalTestTasks {
                     .withEndDateTime("01102014").build();
             task9 = new TaskBuilder().withTitle("Hard Labor").withStartDateTime("07062001 2359")
                     .withDescription("need to get strong").withEndDateTime("03072015 0000").build();
+            
         } catch (IllegalValueException e) {
             e.printStackTrace();
             assert false : "not possible";
